# star_explorer

./: Cargo.toml
assets/: monkey.glb  untitled.glb
assets/dialogue/: earth.json  mars.json
src/: background_stars.rs  communication_system.rs  input_actions.rs  lib.rs  main.rs  navigation_system.rs  notification_system.rs  player_ship.rs  solar_system.rs  space_position.rs  story_system.rs
